data/exec-logs/naive/ruslankl_mice-protein-expression/behavior-based-on-protein-expression-using-svm.exec.log
  File "behavior-based-on-protein-expression-using-svm.py", line 108
    imputer = scale(copy=True,with_std=True,copy=True,axis=True,X=True)
                                           ^
SyntaxError: keyword argument repeated
